# soroban-token-fuzzer

./: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_aquarius_token.rs  fuzz_comet_token.rs  fuzz_example_token.rs  fuzz_excellar_token.rs  fuzz_mobloom_token.rs  fuzz_native_token.rs  fuzz_native_token_contract.rs  fuzz_phoenix_token.rs  fuzz_soroswap_pair_token.rs  fuzz_soroswap_token.rs  fuzz_target_1.rs
src/: addrgen.rs  config.rs  fuzz.rs  input.rs  lib.rs  util.rs
tokens/example-token/: Cargo.toml
