[package]
name = "fuzzing-native-token"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies.soroban-sdk]
path = "../rs-soroban-sdk/soroban-sdk"

[dependencies.soroban-env-common]
path = "../rs-soroban-env/soroban-env-common"

[dev_dependencies.soroban-sdk]
path = "../rs-soroban-sdk/soroban-sdk"
features = ["testutils"]

[patch."https://github.com/stellar/rs-soroban-env"]
soroban-env-common = { path = "../rs-soroban-env/soroban-env-common" }
soroban-env-guest = { path = "../rs-soroban-env/soroban-env-guest" }
soroban-env-host = { path = "../rs-soroban-env/soroban-env-host" }

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true