[package]
name = "soroban-token-fuzzer-driver"
version = "0.1.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
soroban-sdk.version = "20.1.0"
soroban-sdk.features = ["testutils"]
libfuzzer-sys = "0.4"
soroban-token-fuzzer.path = ".."

# Token contracts to test
example-token.path = "../tokens/example-token"
example-token.features = ["testutils"]

soroswap-token.git = "https://github.com/Aimeedeer/soroswap.git"
soroswap-token.rev = "2ed1c005918c746424abe53aa05d2ae560e96815"
soroswap-token.package = "soroban-token-contract"
soroswap-token.features = ["testutils"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.dev]
debug = true
debug-assertions = true
overflow-checks = true

[profile.release]
debug = true
debug-assertions = true
overflow-checks = true

[[bin]]
name = "fuzz_native_token"
path = "fuzz_targets/fuzz_native_token.rs"
test = false
doc = false

[[bin]]
name = "fuzz_example_token"
path = "fuzz_targets/fuzz_example_token.rs"
test = false
doc = false

[[bin]]
name = "fuzz_soroswap_token"
path = "fuzz_targets/fuzz_soroswap_token.rs"
test = false
doc = false

#[patch.crates-io]
#soroban-sdk.path = "../../rs-soroban-sdk/soroban-sdk"
#soroban-token-sdk.path = "../../rs-soroban-sdk/soroban-token-sdk"
#soroban-ledger-snapshot.path = "../../rs-soroban-sdk/soroban-ledger-snapshot"
#soroban-env-common.path = "../../rs-soroban-env/soroban-env-common"
#soroban-env-host.path = "../../rs-soroban-env/soroban-env-host"

#[patch."https://github.com/stellar/rs-soroban-env"]
#soroban-env-common.path = "../../rs-soroban-env/soroban-env-common"
#soroban-env-host.path = "../../rs-soroban-env/soroban-env-host"

