[package]
name = "soroban-token-fuzzer-driver"
version = "0.1.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
soroban-sdk.version = "20.4.0"
soroban-sdk.features = ["testutils"]
libfuzzer-sys = "0.4"
soroban-token-fuzzer.path = ".."

# Token contracts to test
example-token.path = "../tokens/example-token"
example-token.features = ["testutils"]

soroswap-token.git = "https://github.com/Aimeedeer/soroswap.git"
soroswap-token.rev = "6cf027370dbee39cb0a8d848a9f520c9c6ef3c1a"
soroswap-token.package = "soroban-token-contract"
soroswap-token.features = ["testutils"]

soroswap-pair-token.git = "https://github.com/Aimeedeer/soroswap.git"
soroswap-pair-token.rev = "4798ec0202cfee014f73af7158806a34e99dffb1"
soroswap-pair-token.package = "soroswap-pair"
soroswap-pair-token.features = ["testutils"]

excellar.git = "https://github.com/Aimeedeer/excellar.git"
excellar.rev = "bfa5774248772b7eb73c67992302c3dcad4e64bc"
excellar.package = "excellar-token-contract"
excellar.features = ["testutils"]

aquarius.git = "https://github.com/Aimeedeer/soroban-amm.git"
aquarius.rev = "90b16b3c7ac38147f43d5edf60dae0a2c77cf2df"
aquarius.package = "soroban-token-contract"
aquarius.features = ["testutils"]

phoenix.git = "https://github.com/Aimeedeer/phoenix-contracts.git"
phoenix.rev = "b4cbd005d93475cf53144333ba619c880fe0afa6"
phoenix.package = "soroban-token-contract"
phoenix.features = ["testutils"]

mobloom.git = "https://github.com/Aimeedeer/Mobloom-soroban-contracts.git"
mobloom.rev = "8bc4566cf4ee2ef755936051df81599360591ccc"
mobloom.package = "soroban-token-contract"
mobloom.features = ["testutils"]

comet.git = "https://github.com/Aimeedeer/comet-contracts-v1.git"
comet.rev = "bc00345d9948f9ef3a3d571d7d79f77202cc119d"
comet.package = "contracts"
comet.features = ["testutils"]
soroban-fixed-point-math = "1.0.0"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.dev]
debug = true
debug-assertions = true
overflow-checks = true

[profile.release]
debug = true
debug-assertions = true
overflow-checks = true

[[bin]]
name = "fuzz_native_token"
path = "fuzz_targets/fuzz_native_token.rs"
test = false
doc = false

[[bin]]
name = "fuzz_example_token"
path = "fuzz_targets/fuzz_example_token.rs"
test = false
doc = false

[[bin]]
name = "fuzz_soroswap_token"
path = "fuzz_targets/fuzz_soroswap_token.rs"
test = false
doc = false

[[bin]]
name = "fuzz_soroswap_pair_token"
path = "fuzz_targets/fuzz_soroswap_pair_token.rs"
test = false
doc = false

[[bin]]
name = "fuzz_excellar_token"
path = "fuzz_targets/fuzz_excellar_token.rs"
test = false
doc = false

[[bin]]
name = "fuzz_aquarius_token"
path = "fuzz_targets/fuzz_aquarius_token.rs"
test = false
doc = false

[[bin]]
name = "fuzz_phoenix_token"
path = "fuzz_targets/fuzz_phoenix_token.rs"
test = false
doc = false

[[bin]]
name = "fuzz_mobloom_token"
path = "fuzz_targets/fuzz_mobloom_token.rs"
test = false
doc = false

[[bin]]
name = "fuzz_comet_token"
path = "fuzz_targets/fuzz_comet_token.rs"
test = false
doc = false

[patch.crates-io]
soroban-sdk.path = "../../rs-soroban-sdk/soroban-sdk"
#soroban-token-sdk.path = "../../rs-soroban-sdk/soroban-token-sdk"
#soroban-ledger-snapshot.path = "../../rs-soroban-sdk/soroban-ledger-snapshot"
soroban-env-common.path = "../../rs-soroban-env/soroban-env-common"
soroban-env-host.path = "../../rs-soroban-env/soroban-env-host"

[patch."https://github.com/stellar/rs-soroban-env"]
soroban-env-common.path = "../../rs-soroban-env/soroban-env-common"
soroban-env-host.path = "../../rs-soroban-env/soroban-env-host"

