[package]
name = "example-token"
description = "Soroban standard token contract"
version = "0.0.6"
edition = "2021"

[lib]
crate-type = ["rlib"]

[features]
default = []
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { version = "20.0.0" }
soroban-token-sdk = { version = "20.0.0" }

[dev_dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
